# mlx-indextts

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ruff.yml
docs/: implementation_research.md  indextts_1.5_alignment.md  indextts_2.0_alignment.md
mlx_indextts/: __init__.py  cli.py  config.py  convert.py  convert_v2.py  generate.py  generate_v2.py  mel.py  normalize.py  tokenizer.py
mlx_indextts/indextts/s2mel/modules/campplus/: DTDNN.py
mlx_indextts/indextts/utils/: maskgct_utils.py
mlx_indextts/indextts/utils/maskgct/models/codec/amphion_codec/quantize/: __init__.py  residual_vq.py
mlx_indextts/indextts/utils/maskgct/models/codec/kmeans/: repcodec_model.py
mlx_indextts/models/: __init__.py  activations.py  attention.py  bigvgan.py  bigvgan_v2.py  conformer.py  ecapa_tdnn.py  gpt.py  gpt2.py  gpt_v2.py  perceiver.py
mlx_indextts/models/s2mel/: __init__.py  cfm.py  dit.py  length_regulator.py  s2mel.py  wavenet.py
scripts/: alignment_test.py  alignment_test_v2.py  compare_mlx_outputs.py  debug_vq2emb.py  dump_pytorch_outputs.py  dump_pytorch_outputs_v2.py  generate_test_audio.py  memory_test.py  memory_test_mlx.py  test_benchmark.py
skills/mlx-indextts/: SKILL.md
tests/: conftest.py  test_convert.py  test_generate.py  test_integration.py  test_models.py  test_models_v2.py
