[project]
name = "mlx-indextts"
version = "0.1.0"
description = "IndexTTS for Apple Silicon using MLX"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "MLX-IndexTTS Contributors" }]
keywords = ["tts", "text-to-speech", "mlx", "apple-silicon", "voice-cloning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.18.0",
    "numpy>=1.24.0",
    "sentencepiece>=0.2.0",
    "soundfile>=0.12.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.20.0",
    "wetext>=0.1.2",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
convert = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.scripts]
mlx-indextts = "mlx_indextts.cli:main"

[project.urls]
Homepage = "https://github.com/your-repo/mlx-indextts"
Repository = "https://github.com/your-repo/mlx-indextts"
Issues = "https://github.com/your-repo/mlx-indextts/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlx_indextts"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
